--- a/templates/partials/book_form.html
+++ b/templates/partials/book_form.html
@@ -1,10 +1,17 @@
-  
 {% comment %} {% load tailwind_filters %} {% endcomment %}
 
-<div hx-target="this" hx-swap="outerHTML" class="mt-3 py-3 px-3 bg-white shadow border border-gray-100">
+<div hx-target="this" hx-swap="outerHTML">
     <form method="POST">
         {% csrf_token %}
-        {% comment %} {{ form|crispy }} {% endcomment %}
+        {{ form }}
+        <button type="submit" hx-post=".">Submit</button>
+    </form>
+</div>
+
+{% comment %} <div hx-target="this" hx-swap="outerHTML" class="mt-3 py-3 px-3 bg-white shadow border border-gray-100">
+    <form method="POST">
+        {% csrf_token %}
+        {{ form|crispy }}
         {{ form }}
         <button type="submit" hx-post="."
             class="inline-flex items-center px-3 py-2 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
@@ -17,4 +24,4 @@
         </button>
         {% endif %}
     </form>
-</div>
+</div> {% endcomment %}
